--- a/web/package.json
+++ b/web/package.json
@@ -39,12 +39,14 @@
     "@babel/runtime": "^7.14.8",
     "@heroicons/react": "^1.0.3",
     "@reduxjs/toolkit": "^1.6.1",
+    "@tailwindcss/forms": "^0.3.3",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
