--- a/server/package.json
+++ b/server/package.json
@@ -27,9 +27,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.1",
-    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "yup": "^0.32.9"
   }
 }
