--- a/web/package.json
+++ b/web/package.json
@@ -51,6 +51,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "source-map-loader": "^3.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "yup": "^0.32.9"
   }
 }
