--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,7 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
