--- a/web/package.json
+++ b/web/package.json
@@ -50,10 +50,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.0",
+    "react-icons": "^4.2.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "source-map-loader": "^3.0.0",
+    "swiper": "^7.0.1",
     "typescript": "^4.3.5",
     "yup": "^0.32.9"
   }
