--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/server.ts",
+    "start": "node dist/server.js",
+    "dev": "nodemon --exec ts-node server/server.ts",
     "data:import": "node dist/seeder",
     "build": "tsc",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false yarn && yarn build && yarn --prefix web && yarn build --prefix web"
   },
   "keywords": [],
   "author": "",
