--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --config webpack/webpack.config.js --open",
-    "build": "webpack --mode production --config webpack/webpack.config.js",
+    "build": "YARN_PRODUCTION=false webpack --mode production --config webpack/webpack.config.js",
     "clean": "rm -rf build"
   },
   "keywords": [],
