--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
-    "@types/multer": "^1.4.7",
     "@types/node": "^16.4.13",
+    "css-minimizer-webpack-plugin": "^3.2.0",
     "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
@@ -28,10 +28,10 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.1.1",
     "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
-    "multer": "^1.4.2",
     "yup": "^0.32.9"
   }
 }
