--- a/web/.babelrc
+++ b/web/.babelrc
@@ -9,5 +9,8 @@
     ],
     "@babel/preset-typescript"
   ],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-syntax-dynamic-import"
+  ]
 }
