--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
@@ -31,6 +32,7 @@
     "postcss-loader": "^6.1.1",
     "style-loader": "^3.2.1",
     "tailwindcss": "^2.2.7",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
@@ -46,6 +48,7 @@
     "@types/react-router-dom": "^5.1.8",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.21.1",
+    "firebase": "^9.6.1",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
